--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,7 @@
 python_files = *_tests.py test_*.py   # Устанавливает правила для тестовых файлов
 python_classes = Test*               # Устанавливает правила для имен классов
 python_functions = test_*            # Устанавливает правила для имен функций
-
+markers =
+    users: Маркировка для тестов связанных с пользователями
+    regression: Маркировка для регрессионных тестов
 
