Маркировки Pytest. Практика работы с pytest маркировками

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,4 +6,5 @@ python_functions = test_*            # Устанавливает правила
 markers =
     users: Маркировка для тестов связанных с пользователями
     regression: Маркировка для регрессионных тестов
+    authentication: Маркировка для аутентификационных тестов
 
