рефакторинг и подготовка к написанию API автотестов

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 # pytest.ini
 [pytest]
+addopts = -s -v
 python_files = *_tests.py test_*.py   # Устанавливает правила для тестовых файлов
 python_classes = Test*               # Устанавливает правила для имен классов
 python_functions = test_*            # Устанавливает правила для имен функций
@@ -7,4 +8,5 @@ markers =
     users: Маркировка для тестов связанных с пользователями
     regression: Маркировка для регрессионных тестов
     authentication: Маркировка для аутентификационных тестов
+
 
